fixed content shift in web search. other minor changes

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ img {
 }
 
 .dictContainer {
-  margin-top: 100px;
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   padding-bottom: 20px;
